# aieng

./: .env.example  .pre-commit-config.yaml  README.md  aieng.toml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/aieng/: __init__.py  agent.py  config.py  context.py  diff.py  models.py  orchestrator.py  todo_manager.py  ui.py  utils.py
src/aieng/tools/: __init__.py  base.py  command_executor.py  edit_summarizer.py  llm_client.py  subtask_executor.py  todo_planner.py  todo_processor.py
tests/: conftest.py  test_ui.py
tests/tools/: __init__.py
